# lendme

./: .firebaserc  .gitignore  App.tsx  app.json  metro.config.js  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/lendme/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml  styles.xml
fcm-server/: package-lock.json  package.json  server.js  service-account.json
ios/: Podfile
ios/lendme/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/lendme.xcodeproj/: project.pbxproj
src/assets/: index.ts
src/components/: AddButton.tsx  AddButtonStyles.ts  Admin.tsx  AdminStyles.ts  BorrowBottomSheet.tsx  DeviceBottomSheet.tsx  DeviceList.tsx  DeviceListStyles.ts  EditBottomSheet.tsx  EditBottomSheetStyles.ts  SearchBar.tsx  SearchBarStyles.ts  UpdateBottomSheet.tsx  UpdateBottomSheetStyles.ts
src/components/AddBottomSheet/: AddBottomSheet.styles.ts  AddBottomSheet.tsx  AddDeviceBottomSheet.tsx  BrandSelector.tsx  Checkbox.tsx  InputDevice.tsx  SubmitButton.tsx  index.ts
src/components/AddButton/: AddButton.tsx  AddButtonStyles.ts
src/components/BorrowBottomSheet/: BorrowBottomSheet.styles.ts  BorrowBottomSheet.tsx  index.ts
src/components/DetailBottomSheet/: DetailBottomSheet.styles.ts  DetailBottomSheet.tsx  index.ts
src/config/: firebaseConfig.ts
src/screens/: HomeScreen.tsx  HomeScreenStyles.ts
src/utils/: dateUtils.ts  formatDate.ts  sortUtils.ts
(+22 files in other folders)
